--- a/inc/navbar.html
+++ b/inc/navbar.html
@@ -42,6 +42,9 @@
 					<ul class="dropdown-menu">
 						<li><a class="dropdown-item" href="thongkedoanhthu.html">Thống kê doanh thu</a></li>
 					</ul>
+					<ul class="dropdown-menu">
+						<li><a class="dropdown-item" href="thongkedichvu.html">Thống kê dịch vụ</a></li>
+					</ul>
 				</li>
 			</ul>
 			<form class="d-flex" role="search">
